<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deezerFragBG"
    tools:context=".DeezerFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/deezerFragImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/deezerFragTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deezer_frag_titleText"
            android:layout_toRightOf="@id/deezerFragImage"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/deezerFragAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deezer_frag_AlbumText"
            android:layout_toRightOf="@id/deezerFragImage"
            android:layout_below="@+id/deezerFragTitle"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/deezerFragDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deezer_frag_DurText"
            android:layout_toRightOf="@id/deezerFragImage"
            android:layout_below="@+id/deezerFragAlbum"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/deezerFragFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/deezerFragImage"
            android:layout_below="@id/deezerFragDuration"
            android:text="@string/deezer_frag_addFavBtnText"
            />

        <Button
            android:id="@+id/deezerFragHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/deezerFragFav"
            android:layout_below="@id/deezerFragDuration"
            android:text="@string/deezer_frag_hideBtnText"
            android:layout_marginLeft="10dp"
            />

    </RelativeLayout>
</FrameLayout>