<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/lyricToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/lyricDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer ="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/artistLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lyricArtistText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enter_artist" />

                <EditText
                    android:id="@+id/lyricArtistName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/artist_hint"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lyricSongText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enter_song" />

                <EditText
                    android:id="@+id/lyricSongName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/song_hint"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/lyricInstructionsButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lyric_instructions" />

                <Button
                    android:id="@+id/lyricFavouritesButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/saved_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/lyricSearchSwitch"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/search_switch_default" />

                <Button
                    android:id="@+id/lyricSearchButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_button" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/lyricNavigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/lyric_drawer"
            tools:ignore="MissingClass" />

    </androidx.drawerlayout.widget.DrawerLayout>


</LinearLayout>